--- a/C sharp/C sharp.csproj
+++ b/C sharp/C sharp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
     <RootNamespace>C_sharp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>employee.employee</StartupObject>
+    <StartupObject>Params_array.Mutiplication</StartupObject>
   </PropertyGroup>
 
 </Project>
