--- a/InternalDemo/InternalDemo.csproj
+++ b/InternalDemo/InternalDemo.csproj
@@ -3,10 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>C_sharp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>C_sharp.CustomException</StartupObject>
+    <StartupObject>InternalDemo.InternalClass</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\C sharp\C sharp.csproj" />
+  </ItemGroup>
 
 </Project>
